# viper-again

./: .gitignore  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
apps/account/: admin.py  forms.py  models.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/account/templates/accounts/: coordinator-register.html  index.html  login.html  student_register.html
apps/core/: urls.py  views.py
apps/core/templates/core/: index.html
apps/core/templates/core/coordinatorView/: coordinator_dashboard.html
apps/core/templates/core/studentView/: student_dashboard.html
apps/event/: admin.py  forms.py  models.py  urls.py  views.py
apps/event/migrations/: 0001_initial.py  0002_auto_20210525_0032.py
apps/event/templates/events/: event-list.html
templates/: base.html
viper/: settings.py  urls.py
